use rabbit instead of redis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ services:
  - postgresql
  - mysql
  - elasticsearch
- - redis-server
+ - rabbitmq
+language: python
+python:
+ - 2.7
 
 addons:
   apt:
@@ -11,10 +14,6 @@ addons:
     packages:
       - elasticsearch
       - oracle-java8-set-default
-
-language: python
-python:
- - 2.7
 
 matrix:
   include:
