--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ coverage>=4.0,<4.4
 -e git://github.com/pacifica/pacifica-metadata.git#egg=PacificaMetadata
 -e git://github.com/pacifica/pacifica-policy.git#egg=PacificaPolicy
 -e git://github.com/pacifica/pacifica-uniqueid.git#egg=PacificaUniqueID
+-e git://github.com/pacifica/pacifica-python-uploader.git#egg=PacificaUploader
 pre-commit
 pylint
 pytest
