--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
--e git://github.com/pacifica/pacifica-python-uploader.git#egg=PacificaUploader
+git+git://github.com/pacifica/pacifica-python-uploader.git#egg=PacificaUploader
