--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,7 @@ coverage>=4.0,<4.4
 -e git://github.com/pacifica/pacifica-uniqueid.git#egg=PacificaUniqueID
 -e git://github.com/pacifica/pacifica-python-uploader.git#egg=PacificaUploader
 pager
+pep257
 pre-commit
 pylint
 pytest
