add appveyor testing and python 3 as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 language: python
 python:
  - 2.7
+ - 3.6
 
 addons:
   apt:
@@ -15,12 +16,10 @@ addons:
     packages:
       - elasticsearch
       - oracle-java8-set-default
+env:
+- RUN_LINTS=true
+- RUN_LINTS=
 
-matrix:
-  include:
-    - python: 2.7
-    - python: 2.7
-      env: RUN_LINTS=true
 cache: pip
 
 before_install: bash -xe travis/before-install.sh
