--- a/appveyor.yml
+++ b/appveyor.yml
@@ -85,6 +85,7 @@ test_script:
 - ps: >
     echo "This should fail";
     $hit_exception = False;
+    echo $ErrorActionPreference;
     try {
       coverage run --include='uploader_cli/*,CLIUploader.py' -a CLIUploader.py --verbose debug upload --dry-run --instrument 54
     } Catch {
