--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,7 +87,7 @@ test_script:
     $hit_exception = False;
     echo $ErrorActionPreference;
     try {
-      coverage run --include='uploader_cli/*,CLIUploader.py' -a CLIUploader.py --verbose debug upload --dry-run --instrument 54
+      coverage run --include='uploader_cli/*,CLIUploader.py' -a CLIUploader.py --verbose debug upload --dry-run --instrument 54;
     } Catch {
       $hit_exception = True;
     };
