--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,11 @@
 repos:
--   repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+-   repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v1.4
     hooks:
-            -   id: autopep8-wrapper
+            -   id: autopep8
+-   repo: git://github.com/pre-commit/pre-commit-hooks
+    rev: v2.0.0
+    hooks:
             -   id: fix-encoding-pragma
             -   id: trailing-whitespace
             -   id: flake8
@@ -46,7 +49,7 @@ repos:
                 language: system
                 types: [python]
 -   repo: git://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.5
+    rev: v1.1.6
     hooks:
     -   id: remove-tabs
     -   id: remove-crlf
