we should fix the pipeline for metadata changes
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ before_test:
     mkdir -p "C:\etc\pacifica-cli";
     cp config/example.ini /etc/pacifica-cli/config.ini;
     $env:METADATA_CPCONFIG = "$PWD/travis/metadata/server.conf";
+    pacifica-metadata-cmd dbsync;
     Start-Process C:\pacifica\Scripts\pacifica-metadata.exe -RedirectStandardError metadata-error.log -RedirectStandardOutput metadata-output.log;
     nuget install redis-64 -excludeversion;
     redis-64\tools\redis-server.exe --service-install;
