add cart services to pipeline for downloading
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,11 @@ before_test:
     $env:UNIQUEID_CONFIG = "$PWD/travis/uniqueid/config.cfg";
     $env:UNIQUEID_CPCONFIG = "$PWD/travis/uniqueid/server.conf";
     Start-Process C:\pacifica\Scripts\pacifica-uniqueid.exe;
+    $env:CARTD_CONFIG = "$PWD/travis/cartd/config.cfg";
+    $env:CARTD_CPCONFIG = "$PWD/travis/cartd/server.conf";
+    pacifica-cartd-cmd dbsync;
+    Start-Process C:\pacifica\Scripts\pacifica-cartd.exe;
+    Start-Process C:\pacifica\Scripts\celery.exe -ArgumentList "-A pacifica.cartd.tasks worker --loglevel=info -P solo -c 1" -RedirectStandardOutput ccelery-output.log -RedirectStandardError ccelery-error.log;
     $env:INGEST_CONFIG = "$PWD/travis/ingest/config.cfg";
     $env:INGEST_CPCONFIG = "$PWD/travis/ingest/server.conf";
     Start-Process C:\pacifica\Scripts\pacifica-ingest.exe;
@@ -54,7 +59,13 @@ before_test:
     $env:METADATA_URL = "http://127.0.0.1:8121";
     $env:STATUS_URL = "http://127.0.0.1:8121/keys?_id=104";
     Start-Process C:\pacifica\Scripts\pacifica-policy.exe -RedirectStandardError policy-error.log -RedirectStandardOutput policy-output.log;
-    sleep 3;
+    Invoke-WebRequest -InFile README.md -Method PUT -Headers @{'Last-Modified'='Sun, 06 Nov 1994 08:49:37 GMT'} http://127.0.0.1:8080/103;
+    Invoke-WebRequest -InFile README.md -Method PUT -Headers @{'Last-Modified'='Sun, 06 Nov 1994 08:49:37 GMT'} http://127.0.0.1:8080/104;
+    $size = (Get-Item README.md).length;
+    $hash = (Get-FileHash -Algorithm sha1 readme.md).hash;
+    '{ "hashsum": "'+$hash.ToLower()+'", "hashtype": "sha1", "size": '+$size+'}' | Invoke-WebRequest -Method POST -Headers @{ "content-type" = "application/json" } http://127.0.0.1:8121/files?_id=103;
+    '{ "hashsum": "'+$hash.ToLower()+'", "hashtype": "sha1", "size": '+$size+'}' | Invoke-WebRequest -Method POST -Headers @{ "content-type" = "application/json" } http://127.0.0.1:8121/files?_id=104;
+    python "tests/generate_ce_stub_test.py";
     Invoke-WebRequest http://127.0.0.1:8181/status/users/search/dmlb2001/simple -TimeoutSec 1800;
     Invoke-WebRequest 'http://127.0.0.1:8066/get_state?job_id=1234';
     Invoke-WebRequest 'http://127.0.0.1:8051/getid?range=42&mode=test_mode';
@@ -87,11 +98,14 @@ test_script:
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli --config=../travis/uploader.json --help;
     $env:UPLOADER_CONFIG = '../travis/uploader.json';
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --help;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli download --help;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure --help;
-    printf '\n\n\n\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
-    printf '\n\n\nTrue\nclientssl\n~/.pacifica-cli/my.key\n~/.pacifica-cli/my.cert\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
-    printf '\n\n\nFalse\nbasic\nusername\npassword\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
-    printf 'http://localhost:8066/upload\nhttp://localhost:8066/get_state\nhttp://localhost:8181/uploader\nTrue\nNone\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
+    printf '\n\n\n\n\n\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
+    printf '\n\n\n\n\nTrue\nclientssl\n~/.pacifica-cli/my.key\n~/.pacifica-cli/my.cert\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
+    printf '\n\n\n\n\nFalse\nbasic\nusername\npassword\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
+    printf 'http://localhost:8066/upload\nhttp://localhost:8066/get_state\nhttp://localhost:8181/uploader\nhttp://localhost:8081\nhttp://localhost:8181/status/transactions/by_id\nTrue\nNone\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli download --transaction-id 67;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli download --cloudevent ce_stub.json;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --dry-run --instrument 54 --logon dmlb2001;
     $env:PAGER = '';
     printf '\n\n\n\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --dry-run --interactive --logon dmlb2001;
