--- a/docs/_static/example.ini
+++ b/docs/_static/example.ini
@@ -14,12 +14,22 @@
 ; Ingest service external endpoint url for getting status.
 ; (https://ingest.example.com/get_state)
 ;
-; status_url =
+; upload_status_url =
 
 ; Policy service external endpoint url for the uploader.
 ; (https://policy.example.com/uploader)
 ;
-; policy_url =
+; upload_policy_url =
+
+; Cart service external endpoint url for the download.
+; (https://cartd.example.com/
+;
+; download_url =
+
+; Policy service external endpoint url for the download.
+; (https://policy.example.com/transactions/by_id
+;
+; download_policy_url =
 
 ; Status website url to be used with the upload transaction ID.
 ; (https://status.example.com/view/
