--- a/docs/_static/example.ini
+++ b/docs/_static/example.ini
@@ -21,6 +21,11 @@
 ;
 ; upload_policy_url =
 
+; Policy service external endpoint url for validation.
+; (https://policy.example.com/ingest)
+;
+; upload_validation_url =
+
 ; Cart service external endpoint url for the download.
 ; (https://cartd.example.com/
 ;
