Fix #48 add config options to CLI help output
This should add config options to CLI output as well as include
optional user directory configuration.

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -97,12 +97,18 @@ test_script:
     cd tests;
     cp -r ../travis .;
     cp ../README.md .;
-    coverage run --include='*/site-packages/pacifica/cli/*' -m pacifica.cli --config ../travis/uploader.json --help;
+    coverage run --include='*/site-packages/pacifica/cli/*' -m pacifica.cli --help;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --help;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli download --help;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli --config ../travis/uploader.json --help;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli --config=../travis/uploader.json --help;
     $env:UPLOADER_CONFIG = '../travis/uploader.json';
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --help;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli download --help;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure --help;
+    $env:UPLOADER_CONFIG = ''; cp '../travis/uploader.json' ~/.pacifica_cli/uploader.json;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --help;
+    $env:UPLOADER_CONFIG = '../travis/uploader.json';
     printf '\n\n\n\n\n\n\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
     printf '\n\n\n\n\n\nTrue\nclientssl\n~/.pacifica-cli/my.key\n~/.pacifica-cli/my.cert\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
     printf '\n\n\n\n\n\nFalse\nbasic\nusername\npassword\n' | coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli configure;
