--- a/travis/cartd/config-appveyor.cfg
+++ b/travis/cartd/config-appveyor.cfg
@@ -1,5 +1,5 @@
 [database]
-peewee_url = sqliteext:///db.sqlite3
+peewee_url = postgres://postgres:Password12!@localhost/pacifica_cartd
 [celery]
 broker_url = redis://127.0.0.1:6379/1
 backend_url = rpc://
