Add Kerberos (GSSAPI) Authentication Method
This adds GSSAPI as an authentication method for using keytabs and
Kerberos SSO to authenticate against the core endpoints.

Fix https://github.com/pacifica/pacifica-python-uploader/issues/36

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -139,10 +139,11 @@ test_script:
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload travis;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --tar-in-tar README.md;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --local-save retry.tar README.md;
+    tar -xf retry.tar metadata.txt;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --local-save retry.tar --local-compress bzip2 README.md;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --local-save retry.tar --local-compress gzip README.md;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --local-save retry.tar --do-not-upload README.md;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --local-retry retry.tar;
     coverage run --include='*/site-packages/pacifica/cli/*' -a -m pacifica.cli upload --nowait README.md;
-    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pytest -xv;
+    coverage run --include='*/site-packages/pacifica/cli/*' -a -m pytest -xsv;
     coverage report --show-missing --fail-under 100
